# parenthesisExpression

./: .gitmodules  CMakeLists.txt  main.cpp  parenthesisMatch.cpp  parenthesisMatch.h
.github/workflows/: cmake-single-platform.yml  codeql.yml  flawfinder.yml  msvc.yml
CMakeProject1/: CMakeLists.txt  parenthesisMatch.cpp
include/: parenthesisExpression.h  parenthesisMatch.h
lib/: README.md
src/: addition.cpp  containParenthesisExpression.cpp  division.cpp  evaluateString.cpp  isAdditionExpression.cpp  isDivisionExpression.cpp  isMultiplicationExpression.cpp  isSubtractionExpression.cpp  multiplication.cpp  parenthesisMatch.cpp  subtraction.cpp
tests/: CMakeLists.txt  addition.cpp  additionCut.cpp  containParenthesisExpression.cpp  division.cpp  evaluateString.cpp  findDeepestParenthesis.cpp  findDeepestParenthesisIndex.cpp  multiplication.cpp  parenthesisMatch.cpp  removeSpace.cpp  replaceDeepestParenthesisByString.cpp  subtraction.cpp
